--- a/utils/qr_code/makefile
+++ b/utils/qr_code/makefile
@@ -3,12 +3,12 @@
 CC = g++
 CFLAGS = -g `Magick++-config --cppflags --cxxflags`
 
-# Note: not currently compiling with OpenCV
+# OpenCV requirements
 OPENCV_LD = -I/usr/local/include/opencv -I/user/local/include/opencv2
 OPENCV_LIBS = -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_stitching -lopencv_imgcodecs -lopencv_videoio
 
-LDFLAGS = `Magic++-config --ldflags` -L/usr/local/lib/
-LIBS = -lzbar `Magick++-config --libs`
+LDFLAGS = `Magic++-config --ldflags` -L/usr/local/lib/ $(OPENCV_LD)
+LIBS = -lzbar `Magick++-config --libs` $(OPENCV_LIBS)
 EXECTUABLES: read_img
 
 all: $(EXECUTABLES)
@@ -18,7 +18,7 @@ all: $(EXECUTABLES)
 	$(CC) $(CFLAGS) $(LDFLAGS) -c $*.cpp
 
 read_img: read_img.o read_img.h util.o util.h
-	$(CC) $(CFLAGS) -o read_img read_img.o util.o $(LIBS)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o read_img read_img.o util.o $(LIBS)
 
 clean:
 	rm -f $(EXECUTABLES) *.o
