Added some debug statements, clean up, etc.

--- a/utils/qr_code/makefile
+++ b/utils/qr_code/makefile
@@ -1,5 +1,4 @@
 # Makefile for QR Code utility
-
 CC = g++
 CFLAGS = -g `Magick++-config --cppflags --cxxflags`
 
@@ -7,7 +6,7 @@ CFLAGS = -g `Magick++-config --cppflags --cxxflags`
 OPENCV_LD = -I/usr/local/include/opencv -I/user/local/include/opencv2
 OPENCV_LIBS = -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_stitching -lopencv_imgcodecs -lopencv_videoio
 
-LDFLAGS = `Magic++-config --ldflags` -L/usr/local/lib/ $(OPENCV_LD)
+LDFLAGS = `Magick++-config --ldflags` -L/usr/local/lib/ $(OPENCV_LD)
 LIBS = -lzbar `Magick++-config --libs` $(OPENCV_LIBS)
 EXECTUABLES: read_img
 
